[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_pipelines"
version = "0.0.1"
description = "ml pipelines - template package"
authors = [
    {"name" = "<Your Name>"},
]
readme = "README.md"
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">= 3.6"
dependencies = [
    "sagemaker",
]

[project.optional-dependencies]
test = [
    "black",
    "coverage",
    "flake8",
    "mock",
    "pydocstyle",
    "pytest",
    "pytest-cov",
    "sagemaker",
    "tox",
]

[project.scripts]
create-pipeline = "ml_pipelines.create_pipeline:main"

[tool.setuptools.packages.find]
include = ["ml_pipelines*", "source_scripts*"]
