[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_pipelines"
version = "0.0.1"
description = "ml pipelines - template package"
authors = [
    {"name" = "<Your Name>"},
]
readme = "README.md"
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">= 3.6"
dependencies = [
    "sagemaker==2.218.0",
    "datasets==2.8.0",
    "transformers==4.52.1",
    "torch>=2.0.0",
    "peft==0.4.0",
    "bitsandbytes==0.40.2",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "pydocstyle",
]

[project.scripts]
get-pipeline-definition = "ml_pipelines.get_pipeline_definition:main"
run-pipeline = "ml_pipelines.run_pipeline:main"

[tool.setuptools.packages.find]
include = ["ml_pipelines*", "source_scripts*"]
